--- a/Academic/Avocado Data Visualization and Analysis/README
+++ b/Academic/Avocado Data Visualization and Analysis/README
@@ -1,1 +1,2 @@
-
+### May, 2020
+Project Report from MATH 167R Programming in R at San Jose State University. Collabrator: Hana, Jasmeen, Qian, Truc
