--- a/My Solutions for HackerRank Python3/README
+++ b/My Solutions for HackerRank Python3/README
@@ -1,1 +1,2 @@
-# This folder contains all my completely original solutions (without reading anyone else's code until final submission)
+# This folder contains all my original solutions.
+
