--- a/My Solutions for HackerRank Python3/README
+++ b/My Solutions for HackerRank Python3/README
@@ -1,2 +1,2 @@
 # This folder contains all my original solutions.
-
+# It contains only a small portion of submitted solutions that were accepted with full credits.
